--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.3",
+    "tippy.js": "^6.3.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
