--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "@types/react-redux": "^7.1.25",
+    "@types/spotify-web-playback-sdk": "^0.1.19",
     "axios": "^1.4.0",
     "moment": "^2.29.4",
     "overlayscrollbars": "^2.2.0",
